<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/Background"
	android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<RelativeLayout style="@style/TitleBar" android:id="@+id/TitleBar"
		android:layout_alignParentLeft="true">
		<TextView android:id="@+id/Title" style="@style/Title"
			android:text="@string/company_information"></TextView>
		<ImageView android:layout_marginTop="5dip"
			android:layout_height="wrap_content" android:layout_marginBottom="5dip"
			android:src="@drawable/icon" android:layout_centerVertical="true"
			android:id="@+id/Icon" android:layout_marginRight="5dip"
			android:layout_marginLeft="15dip" android:layout_width="wrap_content"
			android:layout_alignParentLeft="true"></ImageView>
	</RelativeLayout>
	<LinearLayout android:orientation="vertical"
		android:layout_below="@id/TitleBar" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/Content"
		android:paddingTop="10dip" android:paddingBottom="10dip">
		<RelativeLayout android:id="@+id/Content1" android:layout_height="wrap_content"
			android:layout_width="match_parent" android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip">
			<TextView style="@style/FormField" android:layout_height="wrap_content"
				android:text="@string/company_name"
				android:layout_width="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:id="@+id/NameTxt"></TextView>
			<EditText android:lines="1" android:layout_height="wrap_content"
				android:layout_weight="1" android:layout_width="200dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:id="@+id/Name" android:singleLine="true" android:maxLength="21"></EditText>
		</RelativeLayout>
		<RelativeLayout android:id="@+id/Content2" android:layout_height="wrap_content"
			android:layout_width="match_parent" android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip">
			<TextView style="@style/FormField" android:layout_height="wrap_content"
				android:text="@string/company_address"
				android:layout_width="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:id="@+id/AddressTxt"></TextView>
			<EditText android:lines="3" android:layout_height="wrap_content"
				android:layout_weight="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_width="200dip" android:id="@+id/Address" android:maxLength="21"></EditText>
		</RelativeLayout>
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/Content3"
			android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
			<TextView style="@style/FormField" android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/company_city" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:id="@+id/CityTxt"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_weight="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_width="200dip" android:lines="1" android:id="@+id/City" android:singleLine="true" android:maxLength="15"></EditText>
		</RelativeLayout>
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/Content4"
			android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
			<TextView style="@style/FormField" android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/company_state" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:id="@+id/StateTxt"></TextView>
			<Spinner android:layout_height="wrap_content" android:layout_width="200dip" android:layout_alignParentRight="true" android:id="@+id/state" android:prompt="@string/state_prompt"></Spinner>
		</RelativeLayout>
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/Content5"
			android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
			<TextView style="@style/FormField" android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/company_zip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:id="@+id/ZipTxt"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_weight="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_width="200dip" android:lines="1" android:id="@+id/Zip" android:singleLine="true" android:phoneNumber="true" android:maxLength="5"></EditText>
		</RelativeLayout>
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/Content6"
			android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
			<TextView style="@style/FormField" android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/company_phone" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:id="@+id/PhoneTxt"></TextView>
			<EditText android:lines="1" android:layout_height="wrap_content"
				android:layout_weight="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_width="200dip" android:id="@+id/Phone" android:singleLine="true" android:phoneNumber="true"></EditText>
		</RelativeLayout>
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/Content7"
			android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
			<TextView style="@style/FormField" android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/company_Location" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:id="@+id/LocationTxt"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_weight="1" android:lines="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_width="200dip" android:id="@+id/Location" android:singleLine="true">
				<requestFocus></requestFocus>
			</EditText>
		</RelativeLayout>
		<RelativeLayout android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center" android:id="@+id/SaveContent">
			<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Save" android:text="@string/save"></Button>
			<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/Cancle" android:layout_toRightOf="@id/Save" android:text="@string/cancle"></Button>
		</RelativeLayout>
	</LinearLayout>
</RelativeLayout>


